Attempting to add a way to get results for each endpoint.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,28 +42,28 @@ Documenation for Identity can be found here: <a href="http://docs.rackspace.com/
         {% endfor %}
         <ul>
         {% for endpoint in role.endpoints %}
-        <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/servers?region={{ endpoint.region}}">Show</a>
+        <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}?region={{ endpoint.region}}">Show</a>
         {% endfor %}
         </ul>
         {% elif role.name == 'cloudMonitoring' %}
         <a href="http://docs.rackspace.com/cm/api/v1.0/cm-devguide/content/service-api-operations.html">{{ role.name }}</a>
         <ul>
             {% for endpoint in role.endpoints %}
-            <li> All regions - {{endpoint.publicURL}} - <a href="/monitoring">Show</a>
+            <li> All regions - {{endpoint.publicURL}} - <a href="/{{role.name}}">Show</a>
             {% endfor %}
         </ul>
         {% elif role.name == 'cloudBackup' %}
         <a href="http://docs.rackspace.com/rcbu/api/v1.0/rcbu-devguide/content/operations.html">{{ role.name }}</a>
         <ul>
             {% for endpoint in role.endpoints %}
-            <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/backups?region={{ endpoint.region}}">Show</a>
+            <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}?region={{ endpoint.region}}">Show</a>
                 {% endfor %}
         </ul>
         {% elif role.name == 'cloudFeeds' %}
         <a href="http://docs.rackspace.com/cloud-feeds/api/v1.0/feeds-devguide/content/api-operations.html">{{ role.name }}</a>
         <ul>
             {% for endpoint in role.endpoints %}
-            <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/feeds?region={{ endpoint.region}}">Show</a>
+            <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}?region={{ endpoint.region}}">Show</a>
                 {% endfor %}
         </ul>
         {% else %}
@@ -72,12 +72,11 @@ Documenation for Identity can be found here: <a href="http://docs.rackspace.com/
             {% if role.name == 'observer' %}
                 - <b>Read Only({{role.name}})</b>
             {% endif %}
-        {% endfor %}
-
+        {% endfor %}<br>
         <ul>
-        {% for endpoint in role.endpoints %}
-        <li> Region {{endpoint.region}} - {{endpoint.publicURL}}</li>
-        {% endfor %}
+            {% for endpoint in role.endpoints %}
+            <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}?region={{ endpoint.region}}">Show</a>
+                {% endfor %}
         </ul>
         {% endif %}
     </li>
