Adding a way to different type of requests.

--- a/sugarcoat/api/templates/json_template.html
+++ b/sugarcoat/api/templates/json_template.html
@@ -24,7 +24,7 @@
 
 {% block header_body %}
     <div id="url_information" class="{{ url_status_class }}">
-        <span class="request_url_header">URL:</span> {{ json_result.url }}<br>
+        <span class="request_url_header">{{ json_result.method }} </span> {{ json_result.url }}<br>
 
         <div class="status_code">
             <span class="request_url_status_code">Status Code: {{ json_result.status_code }}</span>
@@ -38,10 +38,13 @@
 
 
 {% block main_body %}
-<h1>Request</h1>
-<div class="json_display"><pre id="request_code">{{ json_result.request_headers|pprint_obj }}</pre></div>
-<h1>Response</h1>
-<div class="json_display"><pre id="response_code">{{ json_result.response_headers|pprint_obj }}</pre></div>
+<h1>{{ json_result.method }} - Request</h1>
+<div class="json_display"><pre id="request_code">{{ json_result.request_headers|print_headers }}</pre></div>
+<h1>Request Body</h1>
+<div class="json_display"><pre id="response_code">{{ json_result.request_body }}</pre></div>
+
+    <h1>Response</h1>
+<div class="json_display"><pre id="response_code">{{ json_result.response_headers|print_headers }}</pre></div>
 <h1>Data - {{ json_result.result_type }}</h1>
     {% if json_result.safe_html %}
         <div class="json_display"><pre id="display_code">{{ json_result.display_with_relation|convert_to_urls|safe }}</pre></div>
