--- a/sugarcoat/api/static/rci.css
+++ b/sugarcoat/api/static/rci.css
@@ -26,8 +26,8 @@ div.status_code_ok {
     color: blue;
 }
 body {
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
     font-family: verdana, arial, helvetica, sans-serif;
     color: #ccc;
     background-color: #333;
@@ -114,7 +114,6 @@ img {
     font-weight: bold;
     margin-top: 0;
     margin-bottom: 0;
-    /* must be combined with nobr in html for ie5win */
 }
 .tiny {
     font-size: 9px;
@@ -123,9 +122,9 @@ img {
     margin-bottom: 5px;
 }
 #header {
-    margin: 0px 0px 0px 0px;
+    margin: 0 0 0 0;
     padding: 10px;
-    border: 0px;
+    border: 0;
     color: black;
 
 }
@@ -135,10 +134,10 @@ html>body #header {
 #left {
     position: absolute;
     top: 100px;
-    left: 0px;
-    margin: 0px;
+    left: 0;
+    margin: 0;
     padding: 10px;
-    border: 0px;
+    border: 0;
     background: #666;
 }
 html>body #left {
@@ -146,17 +145,17 @@ html>body #left {
 }
 #middle {
     padding: 10px;
-    border: 0px;
+    border: 0;
     background: #666;
-    margin: 0px 150px 0px 150px;
+    margin: 0 150px 0 150px;
 }
 #right {
     position: absolute;
     top: 100px;
-    right: 0px; /* Opera5.02 will show a space at right when there is no scroll bar */
-    margin: 0px;
+    right: 0; /* Opera5.02 will show a space at right when there is no scroll bar */
+    margin: 0;
     padding: 10px;
-    border: 0px;
+    border: 0;
     background: #eee;
 }
 html>body #right {
