--- a/sugarcoat/api/templates/base.html
+++ b/sugarcoat/api/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="/static/rci.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='rci.css') }}">
     <meta charset="UTF-8">
     <title>Homepage</title>
 </head>
