--- a/sugarcoat/api/templates/login.html
+++ b/sugarcoat/api/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block main_body %}
 {% if logged_in %}
-You are logged in, <a href="/logout">logout here.</a>
+You are logged in, <a href="{{ url_for('logout_fn') }}">logout here.</a>
 {% else %}
 <form method="POST">
     {{ form.hidden_tag() }}
