--- a/sugarcoat/api/templates/login.html
+++ b/sugarcoat/api/templates/login.html
@@ -13,5 +13,16 @@ You are logged in, <a href="{{ url_for('logout_fn') }}">logout here.</a>
     {% endfor %}
     <input type="submit" name="Login">
 {% endif %}
+Use an authentication token.
+<form method="POST" action="/validate_token">
+    {{ form.hidden_tag() }}
+
+    {% for field in form %}
+        {% if field.widget.input_type != 'hidden' %} {{ field.label }} {% endif %}
+        {{ field }}<br>
+    {% endfor %}
+    <input type="submit" name="Login">
+    {% endif %}
+
 </form>
 {% endblock %}
