--- a/sugarcoat/api/templates/index.html
+++ b/sugarcoat/api/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block header_body %}
     {% if g.user_info %}
-        <span class="auth_expire_time">Expires in :</span>
+        <span class="auth_expiretime">Expires in :</span>
         {% if g.user_info.token_seconds_left <= 0 %}
         Auth as expired
         {% else %}
@@ -19,10 +19,10 @@
         <br>
 
         <div class="auth_token">
-            See complete auth <a href="{{ url_for('auth_token_view')  }}">here</a><br>
+            See complete auth <a href="/auth_token">here</a><br>
         </div>
         <div class="refresh_token">
-            <a href="{{ url_for('refresh_auth_fn') }}">Refresh auth info</a><br>
+            <a href="/refresh_auth">Refresh auth info</a><br>
         </div>
     {%  else %}
         No info, need to log in.
@@ -34,36 +34,80 @@
     <div id="complete_service_catalog">
         <h2> Identity </h2>
         {% if not g.user_info.token %}
-            <form method="POST" action="{{ url_for('identity_request', new_path="tokens") }}">
-            {{ form.hidden_tag() }}
+            <span id="login_api_title">Login through API</span> -
+            <span id="login_validate_token_title">Login with validated token</span>
 
-            {% for field in form %}
-                {% if field.widget.input_type != 'hidden' %} {{ field.label }} {% endif %}
-                {{ field }}<br>
-            {% endfor %}
-            <input type="submit" name="Login">
-            </form>
+            <div id="login_api">
+                <form method="POST" action="/cloudIdentity/all/tokens">
+                    {{ form.hidden_tag() }}
+                    <div class="json_format">
+                        "stringaaaaa"
+                    </div>
+                    <div class="json_format">
+                        {
+                            "auth": {
+                                "RAX-KSKEY:apiKeyCredentials": {
+                                    "username": "",
+                                    "apiKey": ""
+                                }
+                            }
+                        }
+                    </div>
+                    <input type="submit" name="Login">
+                </form>
+            </div>
+            <div id="login_validate_token">
+                <form method="POST" action="/cloudIdentity/all/tokens">
+                    {{ form_validate.hidden_tag() }}
+
+                    {% for field in form_validate %}
+                        {% if field.widget.input_type != 'hidden' %} {{ field.label }} {% endif %}
+                        {{ field }}<br>
+                    {% endfor %}
+                    <input type="submit" name="Login">
+                </form>
+            </div>
 
         {%  endif %}
         <h2>Service Catalog</h2>
         <ul>
             {% for role in g.user_info.service_catalog_list %}
-            <li id="catalog_{{role.name}}">
-                {{ role.name }}
-                <ul>
-                    {% for endpoint in role.endpoints %}
-                    {% if endpoint.region %}
-                    <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}/{{ endpoint.region}}">Show</a>
-                        {% else %}
-                    <li> Region global - {{endpoint.publicURL}} - <a href="/{{role.name}}/all">Show</a>
+            <div id="catalog_{{role.name}}">
+                <li>
+                    {{ role.name }}
+                    <ul>
+                        {% for endpoint in role.endpoints %}
+                        {% if endpoint.region %}
+                        <li> Region {{endpoint.region}} - {{endpoint.publicURL}} - <a href="/{{role.name}}/{{ endpoint.region}}">Show</a>
+                            {% else %}
+                        <li> Region global - {{endpoint.publicURL}} - <a href="/{{role.name}}/all">Show</a>
 
-                        {% endif %}
-                        {% endfor %}
-                </ul>
-            </li>
+                            {% endif %}
+                            {% endfor %}
+                    </ul>
+                </li>
+            </div>
             {% endfor %}
         </ul>
     </div>
+    <script>
+        $("#login_validate_token").hide();
+        $("#login_api").hide();
+
+        $("#login_validate_token_title").click(function(){
+            $("#login_api").hide();
+            $("#login_validate_token").show();
+        });
+
+        $("#login_api_title").click(function(){
+            $("#login_api").show();
+            $("#login_validate_token").hide();
+        });
+        $("div.json_format").each(function(index, element) {
+            var asdf = JSON.parse(element.innerHTML);
+            element.innerHTML = display_json_new(asdf);
+        })
+    </script>
 
 {% endblock %}
 
